jena-shex/src/test/files/spec/negativeSyntax/IRIREF-with-SPACE.shex
# IRIREF with SPACE
# source: turtle-syntax-bad-uri-01.ttl
<http://a.example/IssueShape> {
   <http://a.example/p 1> .
}
